<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainingDom</string>
    <string name="action_settings">Paramètre</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">Confirmer</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="light">Eclairages</string>
    <string name="sutter">Volets</string>
    <string name="thermique">Thermique</string>
    <string name="room">Piéces</string>
    <string name="title_activity_lights">Lights</string>
    <string name="title_activity_shutters">Shutters</string>
    <string name="title_activity_thermiques">Thermiques</string>
    <string name="title_activity_rooms">Rooms</string>

</resources>
